# delta-neutral-monitor

./: .env.example  .gitignore  README.md  pyproject.toml  vercel.json
deploy/: delta-neutral-monitor-backend.service  delta-neutral-monitor-bot.service  delta-neutral-monitor-cloudflared.service  delta-neutral-monitor-history.service  delta-neutral-monitor-history.timer  delta-neutral-monitor-webapp.service  delta-neutral-monitor.nginx.conf
docs/: self-hosting.md
infra/: docker-compose.yml
scripts/: configure_kucoin_public_routes.sh  register_vest_api.py  run_quick_tunnel_and_sync_vercel.sh
src/: config.py  deps.py  main.py
src/api/: routes.py
src/bot/: command_logic.py  (+4 more)
tests/: test_aden_connector.py  test_alert_subscriptions.py  test_api_history_route.py  test_bingx_connector.py  test_bitget_connector.py  test_bot_commands.py  test_bot_keyboards.py  test_bot_rendering.py  test_bot_status_source.py  test_capture_history_snapshot.py  test_credential_store.py  test_credential_validation.py  test_daily_report_service.py  test_dashboard_webapp_scaffold.py  test_deps_telegram_preferences.py  test_extended_connector.py  test_gate_connector.py  test_history_service.py  test_hyperliquid_connector.py  test_kucoin_connector.py  test_lighter_connector.py  test_monitoring_service.py  test_okx_connector.py  test_pacifica_connector.py  test_risk_engine.py  test_setup_flow.py  test_status_route_cache.py  test_status_service.py  test_telegram_preferences.py  test_vercel_backend_entrypoint.py  test_vest_connector.py
webapp/: .env.example  package-lock.json  package.json
(+50 files in other folders)
