[project]
name = "delta-neutral-monitor"
version = "0.1.0"
description = "Telegram bot + dashboard backend for margin and liquidation risk monitoring"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "aiogram>=3.7.0",
  "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = []
